<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:orientation="horizontal"
        android:padding="5.0dip" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5.0dip"
            android:background="@null"
            android:onClick="onClick"
            android:text="@string/cancle"
            android:textColor="#9fb4e3"
            android:textSize="16.0dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btnCancel"
            android:background="@drawable/bg_search_frame" >

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="5.0dip"
                android:clickable="true"
                android:contentDescription="@string/empty"
                android:onClick="onClick"
                android:src="@drawable/ic_search" />

            <start.widget.CustomEditText
                android:id="@+id/et_search_content"
                style="@style/newssearch"
                android:layout_toRightOf="@id/ivSearch"
                android:background="@null"
                android:hint="@string/searchkeyshint" />
        </RelativeLayout>
    </RelativeLayout>

    <View style="@style/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15.0dip"
        android:text="@string/hotsearch"
        android:textColor="#888888"
        android:textSize="16.0dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5.0dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/searchkeysbutton1"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_1" />

            <Button
                android:id="@+id/searchkeysbutton2"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_2" />

            <Button
                android:id="@+id/searchkeysbutton3"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_3" />

            <Button
                android:id="@+id/searchkeysbutton4"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_4" />

            <Button
                android:id="@+id/searchkeysbutton5"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_5"
                android:visibility="gone"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/searchkeysbutton6"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_6" />

            <Button
                android:id="@+id/searchkeysbutton7"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_7" />

            <Button
                android:id="@+id/searchkeysbutton8"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_8" />

            <Button
                android:id="@+id/searchkeysbutton9"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_9" />

            <Button
                android:id="@+id/searchkeysbutton10"
                style="@style/searchkeysbutton"
                android:text="@string/search_text_10"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>