<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/module_header_main" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40.0dip"
                android:background="#fff3f3f3"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:id="@+id/rl_column"
                    android:layout_width="match_parent"
                    android:layout_height="40.0dip"
                    android:layout_weight="1.0" >

                    <com.start.widget.ColumnHorizontalScrollView
                        android:id="@+id/mColumnHorizontalScrollView"
                        android:layout_width="match_parent"
                        android:layout_height="40.0dip"
                        android:scrollbars="none" >

                        <LinearLayout
                            android:id="@+id/mRadioGroup_content"
                            android:layout_width="fill_parent"
                            android:layout_height="40.0dip"
                            android:layout_centerVertical="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="10.0dip"
                            android:paddingRight="10.0dip" />
                    </com.start.widget.ColumnHorizontalScrollView>

                    <ImageView
                        android:id="@+id/shade_left"
                        android:layout_width="10.0dip"
                        android:layout_height="40.0dip"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/channel_leftblock"
                        android:contentDescription="@string/empty"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/shade_right"
                        android:layout_width="10.0dip"
                        android:layout_height="40.0dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/channel_rightblock"
                        android:contentDescription="@string/empty"
                        android:visibility="visible" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_more_columns"
                    android:layout_width="wrap_content"
                    android:layout_height="40.0dip" >

                    <ImageView
                        android:id="@+id/button_more_columns"
                        android:layout_width="40.0dip"
                        android:layout_height="40.0dip"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/channel_glide_day_bg" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/category_line"
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="#ffdddddd" />

            <android.support.v4.view.ViewPager
                android:id="@+id/mViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_menu_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onClick"
            android:background="#aa000000"
            android:orientation="vertical"
            android:visibility="gone" >

            <ScrollView
                android:id="@+id/main_menu"
                android:layout_width="200.0dip"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="200.0dip"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtNews"
                        style="@style/sliding_left_textview"
                        android:drawableLeft="@drawable/ic_news"
                        android:enabled="false"
                        android:text="@string/news" />

                    <TextView
                        android:id="@+id/txtResources"
                        style="@style/sliding_left_textview"
                        android:drawableLeft="@drawable/ic_resources"
                        android:text="@string/resources" />

                    <TextView
                        android:id="@+id/txtActivities"
                        style="@style/sliding_left_textview"
                        android:drawableLeft="@drawable/ic_activities"
                        android:text="@string/activities" />

                    <TextView
                        android:id="@+id/txtExperts"
                        style="@style/sliding_left_textview"
                        android:drawableLeft="@drawable/ic_experts"
                        android:text="@string/experts" />

                    <TextView
                        android:id="@+id/txtApp"
                        style="@style/sliding_left_textview"
                        android:drawableLeft="@drawable/ic_app"
                        android:text="@string/app" />

                    <TextView
                        android:id="@+id/txtMember"
                        style="@style/sliding_left_textview"
                        android:drawableLeft="@drawable/ic_member"
                        android:text="@string/member" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>